--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         <div>
             <h1 class="cover-title">Expansão para o mercado hispano em 90 dias</h1>
             <p class="cover-subtitle">
-                Guia estratégico completo para empresas brasileiras de tecnologia, SaaS e alto ticket conquistarem 400 milhões de hispanofalantes
+                Guia estratégico completo para empresas brasileiras de alto ticket conquistarem 400 milhões de hispanofalantes
             </p>
         </div>
         
@@ -1731,4 +1731,5 @@
     </div>
 
 </body>
+
 </html>
